# vim: set noexpandtab:

2012-12-15 Steve
	* Added JetTauEtmiss stream to DataStream enum
	* Tagging SusyNtuple-00-00-39

2012-12-14 Steve
	* Removed Event.lumiSF
	* Renamed Lepton.truthMatchType to truthType
	* Added missing variables to copy constructors and assignment operators
	* Removed Lepton inheritance from Tau class. Now inherits from Particle.
	* Added matched2TruthLepton to Tau class
	* Added isOppSign(tau, tau) method to SusyNtTools
	* Changed SusyNtTools Mll function to take Particle pointers, for taus
	* Added alternative Meff method which also includes taus
	* Commented out bestZ method to force update to findBestZ method
	* Tagging SusyNtuple-00-00-38

2012-12-06 Steve
	* Tagging SusyNtuple-00-00-37

2012-12-03 Steve
	* Added TauID enum for controlling tau selection
		* Added the flag to isSignalTau
		* Not sure yet if I should propagate to other tau selection functions
	* Added nTrack requirement for the tau eleBDT veto
	* Added clusPhi and trackPt to Electron class
	* Added idTrackPt, idTrackEta, idTrackPhi to Muon class
	* Added truthType and detailedTruthType to Tau class

2012-11-28 Steve
	* Added findBestZ method for jets
	* Added Mlljj method

2012-11-27 Steve
	* Added tau trigger chains

2012-11-19 Steve
	* Added fixed xsec for Sherpa VV semi-leptonic samples in getEventWeightFixed
		* Should be used when reading n0105 or n0111
	* Tagging SusyNtuple-00-00-36

????-??-?? Anyes
	* Tag SusyNtuple-00-00-35

2012-10-30 Matt
	* Added flag for using nominal phi in the retrieval of met with NtSys_SCALEST_UP/DOWN
	* Also added nominal phi for met with NtSys_RESOST

2012-10-30 Anyes
	* Added const to hasJetInBadFCAL
	* Added feature to TGuiUtils

2012-10-25 Steve
	* Added protection against file open errors in ChainHelper
	* Tagging SusyNtuple-00-00-34

2012-10-24 Steve
	* Added a fix for sumw of 147772 Sherpa Ztautau in getEventWeightFixed
	* Tagging SusyNtuple-00-00-33

2012-10-22 Steve
	* Updated period enum and function in SusyDefs